# bevy_geodesic_grid

./: Cargo.toml
assets/: geodesic_grid.wgsl
examples/: camera_controller.rs  showcase.rs
src/: geodesic_grid.rs  icosahedron.rs  lib.rs  surface_structures.rs  tiles.rs
